# content_crafters

./: .dockerignore  .env-example  .gitignore  Cargo.toml  Dockerfile  README.md  deploy_k8s.sh  deployment.yaml  docker-compose.yml  ingress.yaml  mongodb-deployment.yaml  render.yaml  secret.yaml  service.yaml
.github/workflows/: rust.yml
api/: Cargo.toml
api/src/: lib.rs  main.rs
api/src/endpoints/: hello.rs  mod.rs
api/src/endpoints/content/: handlers.rs  metadata.rs  mod.rs  models.rs  routes.rs  update_program_dto.rs  upload.rs  version.rs
api/src/endpoints/group/: routes.rs  upload.rs
api/src/endpoints/pipeline/: metadata.rs  mod.rs  routes.rs
api/src/utils/: error.rs  field_parser.rs  firebase.rs  mod.rs
api/src/web/: server.rs
cli/: Cargo.toml
cli/src/: lib.rs  operation.rs  parser.rs
logger/: Cargo.toml
logger/src/: lib.rs
shared/: Cargo.toml
shared/src/: db.rs  lib.rs  models.rs  serializers.rs
shared/src/database/: api_response.rs  db.rs  db_interface.rs  mock_db.rs  mod.rs
shared/src/models/: content_details.rs  content_id.rs  mod.rs  pipeline.rs  program.rs  upload_file.rs
src/: lib.rs  main.rs
src/web/: server.rs
