[package]
name = "content_crafters"
version = "0.1.0"
edition = "2021"

authors = ["James <jabib@myges.fr>", "Ronan <rkielt@myges.fr>", "Charles <ccretois@myges.fr>"]
description = "A content management and social interaction platform"
repository = "https://github.com/jabibamman/content_crafters"

[dependencies]
# Web framework for handling RESTful API and WebSocket
actix = "0.13.1"
actix-web = "4.4.1"
actix-rt = "2.5"  # Runtime for actix-web

# For the API documentation
utoipa = { version="4.2.0", features = ["actix_extras"]}
utoipa-swagger-ui = {version="6.0.0", features=["actix-web"]}

# MongoDB integration
#mongodb = "2.0"

# async runtime
#tokio = { version = "1", features = ["full"] }

# WebSocket integration with Tokio
tokio-tungstenite = "0.16.1"

# AWS SDK for S3 access
#rusoto_core = "0.47.0"
#rusoto_s3 = "0.47.0"

# OR
# Google Cloud Storage
#cloud-storage = "0.10.1"

# JSON handling
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

# Environment variable management
dotenv = "0.15.0"

# Logging
log = "0.4"
env_logger = "0.11.0"

# useful for handling HTTP requests and responses
#reqwest = "0.11"

# dates and times
# chrono = "0.4"

[features]
default = []
