[workspace]
resolver = "2"

members = [
    "api",
    "shared",
    "logger",
    "cli"
]

# MongoDB integration
#mongodb = "2.0"

# AWS SDK for S3 access
#rusoto_core = "0.47.0"
#rusoto_s3 = "0.47.0"

# OR
# Google Cloud Storage
#cloud-storage = "0.10.1"

# useful for handling HTTP requests and responses
#reqwest = "0.11"

# dates and times
# chrono = "0.4"

